--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.20"
   }
