--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
-    "typeorm": "^0.3.20"
+    "socket.io": "^4.7.5",
+    "typeorm": "^0.3.20",
+    "ws": "^8.18.0"
   }
 }
